--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
+    "@mui/x-date-pickers": "^7.11.0",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.12",
     "firebase": "^10.11.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "swapy": "^0.0.5",
     "sweetalert2": "^11.10.8",
+    "toastify-js": "^1.12.0",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
   },
